Ajuste cargue de imagen para enrutamiento a Slicer

--- a/viewer/tests/pacs/viewer.html
+++ b/viewer/tests/pacs/viewer.html
@@ -128,8 +128,8 @@ hr.vertical {
   <div class="container">
     <div class="line">
     <label for="fileinput">Input:</label>
-    <input type="file" id="fileinput" multiple>
-    <progress id="loadprogress" max="100" value="0"></progress>
+    <input type="file" id="fileinput">
+    <progress id="loadprogress" value="0"></progress>
     </div>
     
     <!-- DWV -->
