--- a/viewer/tests/index.html
+++ b/viewer/tests/index.html
@@ -6,8 +6,7 @@
   <title>Document</title>
 </head>
 <body>
-  <h1>DWV Test Viewer</h1>
   
-</body><iframe src="\tests\pacs\viewer.html" width="800" height="1000"></iframe>
+</body><iframe src="\tests\pacs\viewer.html" width="100%" height="1400"></iframe>
 
 </html>
