--- a/dicom-visualizer/tests/pacs/viewer.html
+++ b/dicom-visualizer/tests/pacs/viewer.html
@@ -381,7 +381,7 @@ progress {
       <tbody>          
       </tbody>
   </table>
-  <button id="btn_process" type="submit" onclick="procces()" class="Process_btn">Procesar</button>
+  <button id="btn_process" type="submit" onclick="process()" class="Process_btn">Procesar</button>
   </div>
 
 
